--- a/Kernel/configs/xiaomi9.config.json
+++ b/Kernel/configs/xiaomi9.config.json
@@ -1,8 +1,8 @@
 [
   {
     "kernelSource": {
-      "name": "Xiaomi9KernelPoweredBySeparate",
-      "repo": "https://github.com/Separatee/AllinOneKernel",
+      "name": "yasea",
+      "repo": "https://github.com/begeekmyfriend/yasea",
       "branch": "main",
       "device": "cepheus",
       "defconfig": "cepheus_defconfig"
